Added some docs and updated subrosa_config.php.tmpl to use more MT tags.

--- a/plugins/SubRosa/default_templates/subrosa_config.php.tmpl
+++ b/plugins/SubRosa/default_templates/subrosa_config.php.tmpl
@@ -1,8 +1,8 @@
 <?php
 
 $config['controller_blog_id'] = <$MTBlogID$>;
-$config['mt_dir'] = '/Users/jay/Sites/jay.local/html/ccsa/mt';
-$config['subrosa_path'] = 'plugins/SubRosa/php/SubRosa.class';
+$config['mt_dir'] = '<mt:CGIServerPath>';
+$config['subrosa_path'] = 'plugins/SubRosa/php/lib/SubRosa.php';
 $config['site_path'] = '<$MTBlogSitePath$>';
 //$config['log_output'] = '<$MTBlogSitePath$>php_debug.log';
 $config['exclude_blogs'] = array(1,2,9,14);
